src/main/resources/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-upstream
  labels:
    app: service-upstream
spec:
  selector:
    app: service-upstream
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
