src/main/resources/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-downstream-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /external-client
            pathType: Prefix
            backend:
              service:
                name: service-upstream
                port:
                  number: 80
